Added title to index.htm, Added h1 to index.htm

--- a/index.htm
+++ b/index.htm
@@ -4,8 +4,14 @@
 
 		<head>
 
-			
+			<title>Welcome - Indesolate Games</title>
 
 		</head>
+
+		<body>
+			
+			<h1>Welcome to Indesolate Games</h1>
+
+		</body>
 
 	</html>
