Added aboutUs.htm and contactUs.htm ; Added links to top of index.htm, aboutUs.htm, and contactUs.htm

--- a/index.htm
+++ b/index.htm
@@ -9,7 +9,8 @@
 		</head>
 
 		<body>
-			
+
+			<a href='aboutUs.htm'>About Us </a>|<a href="contactUs.htm"> Contact Us</a>			
 			<h1>Welcome to Indesolate Games</h1>
 
 		</body>
