Added div tags to index.htm

--- a/index.htm
+++ b/index.htm
@@ -9,9 +9,10 @@
 		</head>
 
 		<body>
-
-			<a href='aboutUs.htm'>About Us </a>|<a href="contactUs.htm"> Contact Us</a>			
-			<h1>Welcome to Indesolate Games</h1>
+			<div>
+				<a href='aboutUs.htm'>About Us </a>|<a href="contactUs.htm"> Contact Us</a>			
+				<h1>Welcome to Indesolate Games</h1>
+			</div>	
 
 		</body>
 
