Added form element to contactUs.htm

--- a/contactUs.htm
+++ b/contactUs.htm
@@ -12,6 +12,11 @@
 
 			<a href='index.htm'>Home </a>|<a href="aboutUs.htm"> About Us</a>			
 			<h1>Contact Us</h1>
+			<form>
+				
+				<input type='text' />
+
+			</form>
 
 		</body>
 
