Linked style.css in index.htm, contactUs.htm and aboutUs.htm

--- a/aboutUs.htm
+++ b/aboutUs.htm
@@ -5,6 +5,7 @@
 		<head>
 
 			<title>About Us - Indesolate Games</title>
+			<link rel="stylesheet" type="text/css" href="style.css">
 
 		</head>
 
