--- a/index.htm
+++ b/index.htm
@@ -5,13 +5,14 @@
 		<head>
 
 			<title>Welcome - Indesolate Games</title>
+			<link rel="stylesheet" type="text/css" href="style.css">
 
 		</head>
 
 		<body>
 			<div>
 				<a href='aboutUs.htm'>About Us </a>|<a href="contactUs.htm"> Contact Us</a>			
-
+				<h1>Welcome to Indesolate Games</h1>
 			</div>	
 
 		</body>
