--- a/contactUs.htm
+++ b/contactUs.htm
@@ -5,6 +5,7 @@
 		<head>
 
 			<title>Contact Us - Indesolate Games</title>
+			<link rel="stylesheet" type="text/css" href="style.css">
 
 		</head>
 
